<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_text_1"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:textSize="50dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/l_text_2"
                android:textAlignment="center"
                android:gravity="center"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/btn_background"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:hint="@string/l_text_3"

                android:inputType="text|textPassword"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_text_4"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:background="@drawable/btn_background"

                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/l_login_btn_text"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_text_5"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@android:style/Widget.Button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/btn_background"
                android:text="@string/l_text_6"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>