<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".PurchaseConfirmationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header -->
            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PC_1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- Purchased Movie Details -->
            <LinearLayout
                android:id="@+id/layoutPurchasedMovieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/textViewHeader">

                <!-- Movie Title -->
                <TextView
                    android:id="@+id/textViewMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/F_2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <!-- Movie Description -->
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ava"
                    />

                <TextView
                    android:id="@+id/textViewMovieDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AVA_1"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <!-- Price -->
                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PM_2"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

    <!-- Thank You Message -->
    <TextView
        android:id="@+id/textViewThankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PC_2"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layoutPurchasedMovieDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Continue Button -->
                <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PC_3"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@id/textViewThankYou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>