<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:text="@string/S_text_1"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/S_text_2"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/S_text_3"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:gravity="center"

                android:hint="@string/S_text_4"
                android:inputType="text|textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:gravity="center"

                android:hint="@string/S_text_5"
                android:inputType="text|textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                style="@android:style/Widget.Button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_background"
                android:text="@string/S_sign_btn_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>