<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".profileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <!-- Profile Title -->

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PA_1"
                android:gravity="center"
                android:textColor="#FFA500"
                android:textSize="50sp"
                android:textStyle="bold"
                />

            <!-- Top Divider -->

            <View
                android:id="@+id/dividerView"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/editProfileButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <!-- Profile Information -->

            <ImageView
                android:id="@+id/imageView"
                android:outlineSpotShadowColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/pp"
                />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/PA_2"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PA_3"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favoriteGenresTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PA_4"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PA_5"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PA_6"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PA_7"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profilebutton1"
                style="@android:style/Widget.Button"
                android:background="@drawable/btn_background"

                android:layout_marginTop="24dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="50dp"

                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/EP_1"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>

            <!-- Bottom Divider -->

            <View
                android:id="@+id/dividerView1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/editProfileButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recentlyViewedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PA_8"
                    android:textColor="#ffc107"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/watchlistRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/search_edit_background"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp">
                <!-- Recently viewed -->

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ava"
                        >
                    </ImageView>


                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/F_2"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/profilebutton2"
                        style="@android:style/Widget.Button"
                        android:background="@drawable/btn_background"

                        android:layout_marginTop="80dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="100dp"

                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="@string/F_3"
                        android:textStyle="bold"
                        android:textColor="@color/white">

                    </androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
